--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -179,7 +179,7 @@ div.grid{
             <div class="grid card-grid-fancy">
                 <div class="main-cards">
                     <a href="/md">
-                        <img src="/home_page/Mechanism%20Design.png" style="background-color: white" alt="Mechansim Design Logo" />
+                        <img src="/home_page/MechanismDesign.png" style="background-color: white" alt="Mechansim Design Logo" />
                         <p>Mechanism Design</p>
                     </a>
                 </div>
