--- a/src/pages/sol/stress_transformation.astro
+++ b/src/pages/sol/stress_transformation.astro
@@ -168,7 +168,7 @@ Normal and shear stresses can be shown graphically as a function of <InlineEquat
 
     
   <SubSubSection title="2-D Mohr's Circle" id="2d">
-    Mohr's circle is a graphical representation of stress transformations. The equations for stress transformations actually describe a circle if we consider the normal stress <InlineEquation equation="\\sigma" /> to be the x-coordinate and the shear stress <InlineEquation equation="\\pi" /> to be the y-coordinate.
+    Mohr's circle is a graphical representation of stress transformations. The equations for stress transformations actually describe a circle if we consider the normal stress <InlineEquation equation="\\sigma" /> to be the x-coordinate and the shear stress <InlineEquation equation="\\tau" /> to be the y-coordinate.
 
    <Image src="/sol/stress_transformation/mohrsCircle.png" width="4"></Image>
   
