--- a/src/pages/sta/moment_of_inertia.astro
+++ b/src/pages/sta/moment_of_inertia.astro
@@ -77,7 +77,7 @@ import Col from "../../components/Col.astro"
         <tr>
             <th>Units</th>
             <td>
-                <InlineEquation equation="length*mass^2"/>
+                <InlineEquation equation="mass * length ^ 2"/>
             </td>
             <td class="table-shaded">
                 <InlineEquation equation="length^4"/>
