adjusted code readability
no functional change just reorganized some things

--- a/src/pages/sta/frames_and_machines.astro
+++ b/src/pages/sta/frames_and_machines.astro
@@ -88,8 +88,8 @@ Frame and machine analysis involves the following steps:
 
 	<p class = "text-center"><u>Unknowns:</u> <InlineEquation equation = "G_x, G_y, F_{DE}"/></p>
 	<DisplayEquation equation = `\\begin{align} &\\sum F_x = G_x + F_{DE} * \\cos \\theta = 0 \\\\
-	&\\sum F_y = G_y + F_{DE} * \\sin \\theta + F = 0 \\\\
-	&\\sum M_G = F * (145 \\text{ mm}) + (F_{DE} * \\sin \\theta) * (33 \\text{ mm}) = 0 \\end{align}`/>
+		&\\sum F_y = G_y + F_{DE} * \\sin \\theta + F = 0 \\\\
+		&\\sum M_G = F * (145 \\text{ mm}) + (F_{DE} * \\sin \\theta) * (33 \\text{ mm}) = 0 \\end{align}`/>
 	<DisplayEquation equation = "\\text{where } \\theta = \\arctan \\frac{17}{16} = 46.7357 ^ \\circ"/>
 	<DisplayEquation equation = "F_{DE} = -F * \\frac{(145 \\text{ mm})}{(33 \\text{ mm}) * \\sin \\theta} = -362.038 \\text{ N}"/>
 
@@ -103,7 +103,7 @@ Frame and machine analysis involves the following steps:
 
 	<p class = "text-center"><u>Unknowns:</u> <InlineEquation equation = "F_A, C_x, C_y"/></p>
 	<DisplayEquation equation = "\\sum M_C = 0"/>
-	<DisplayEquation equation = "= -(F_{DE} * \\sin \\theta) * (49 \\text{ mm}) - (F_{DE} * \\cos{\\theta}) * (14 \\text{ mm}) -F_A * (61 \\text{ mm})"/>
+	<DisplayEquation equation = "= -(F_{DE} * \\sin \\theta) * (49 \\text{ mm}) - (F_{DE} * \\cos \\theta) * (14 \\text{ mm}) -F_A * (61 \\text{ mm})"/>
 	<DisplayEquation equation = "F_A = 268.692 \\text{ N}"/>
 
 	<p> Writing the sum of moments about point C allows us to solve for the force at A, which is 268.692 N. </p>
