--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -268,10 +268,10 @@ The direction of a vector can be written as a unit vector by dividing the vector
 
 <DisplayEquation equation = "\\hat{u}_A = \\frac{A_x}{|A|} * \\hat{\\imath} + \\frac{A_y}{|A|} * \\hat{\\jmath} + \\frac{A_z}{|A|} * \\hat{k}" title = "The unit vector can be written as" background = "True" derivation = "True" id = "uv">
   <DisplayEquation equation = `\\begin{align} \\hat{u}_A &= \\frac{A_x}{|A|} * \\hat{\\imath} + \\frac{A_y}{|A|} * \\hat{\\jmath} + \\frac{A_z}{|A|} * \\hat{k} \\\\
-  &= \\frac{1}{|A|} * [A_x * \\hat{\\imath} + A_y * \\hat{\\jmath} + A_z * \\hat{k}] \\\\
-  &= \\frac{1}{|A|} * \\vec{A} \\\\
-  &= \\frac{1}{\\cancel{|A|}} * \\cancel{|A|} * \\hat{u}_A \\\\
-  &= \\hat{u}_A \\end{align}`/>
+    &= \\frac{1}{|A|} * [A_x * \\hat{\\imath} + A_y * \\hat{\\jmath} + A_z * \\hat{k}] \\\\
+    &= \\frac{1}{|A|} * \\vec{A} \\\\
+    &= \\frac{1}{\\cancel{|A|}} * \\cancel{|A|} * \\hat{u}_A \\\\
+    &= \\hat{u}_A \\end{align}`/>
 </DisplayEquation>
 <p>
 Alternatively, the vector components can be determined geometrically via the angles of each component with respect to the Cartesian Axes. 
@@ -283,9 +283,9 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 <DisplayEquation equation = "\\vec{A} = |A| * \\cos \\alpha * \\hat{\\imath} + |A| * \\cos \\beta * \\hat{\\jmath} + |A| * \\cos \\gamma * \\hat{k}" title = "The vector can be written as" background = "True" derivation = "True" id = "sc">
   <DisplayEquation equation = `\\begin{align} \\vec{A} &= A_x * \\hat{\\imath} + |A| * \\hat{\\jmath} * |A| * \\hat{k} \\\\
-  &= |A| * \\cos \\alpha * \\hat{\\imath} + |A| * \\cos \\beta * \\hat{\\jmath} + |A| * \\cos \\gamma * \\hat{k} \\\\
-  &= |A| * [\\cos \\alpha * \\hat{\\imath} + \\cos \\beta * \\hat{\\jmath} + \\cos \\gamma * \\hat{k}] \\\\
-  &= |A| * \\hat{u}_A \\end{align}`/>
+    &= |A| * \\cos \\alpha * \\hat{\\imath} + |A| * \\cos \\beta * \\hat{\\jmath} + |A| * \\cos \\gamma * \\hat{k} \\\\
+    &= |A| * [\\cos \\alpha * \\hat{\\imath} + \\cos \\beta * \\hat{\\jmath} + \\cos \\gamma * \\hat{k}] \\\\
+    &= |A| * \\hat{u}_A \\end{align}`/>
 </DisplayEquation>
 
 </SubSection>
@@ -600,7 +600,7 @@ Alternatively, the vector components can be determined geometrically via the ang
 
 <!-- There's a picture from the Overleaf document that needs to get inserted here - it's figure 8 in the 210 Overleaf File -->
 
-<DisplayEquation title = "The cross product can be written as" equation = "\\vec{A} \\times \\vec{B} = (B_z * A_y - A_z * B_y) * \\hat{\\imath} - (A_x * B_z - A_z * B_x) * \\hat{\\jmath} + (A_x * B_y - A_y * B_x) * \\hat{k}" background = "True" derivation = "True" id = "cp">
+<DisplayEquation equation = "\\vec{A} \\times \\vec{B} = (B_z * A_y - A_z * B_y) * \\hat{\\imath} - (A_x * B_z - A_z * B_x) * \\hat{\\jmath} + (A_x * B_y - A_y * B_x) * \\hat{k}" title = "The cross product can be written as" background = "True" derivation = "True" id = "cp">
   <DisplayEquation equation = `\\begin{align} \\vec{A} \\times \\vec{B} &= \\begin{vmatrix}
       \\hat{\\imath} & \\hat{\\jmath} & \\hat{k} \\\\
       A_x & A_y & A_z \\\\
