--- a/src/pages/sta/hydrostatic_fluid_pressure.astro
+++ b/src/pages/sta/hydrostatic_fluid_pressure.astro
@@ -81,14 +81,14 @@ In 3D, the value for <InlineEquation equation=" w " />, the distributed load on 
 
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid3DPlate.PNG' width='5'></Image>
 
-<DisplayEquation equation = "F_R = \\rho * g * h * b * L" background = "True" title = "In 3D, the resultant force from the distributed load can be written as" id = "hfp-3D" derivation = "True">
+<DisplayEquation equation = "F_R = \\rho * g * h * b * L" title = "In 3D, the resultant force from the distributed load can be written as" background = "True" derivation = "True" id = "hfp-3D">
 	<DisplayEquation equation = "\\begin{align} w = p = \\rho * g * h && \\mathrm{[\\frac{N}{m^2}]} \\end{align}"/>
 	<p class = "text-center">
 		(force over area)<br>
 		To find <InlineEquation equation = "F_R,"/> multiply by area:
 	</p>
 	<DisplayEquation equation = `\\begin{align} F_R &= w * (b * L) \\Leftarrow \\text{volume under distributed load!} \\\\
-	&= \\rho * g * h * b * L \\end{align}`/>
+		&= \\rho * g * h * b * L \\end{align}`/>
 </DisplayEquation>
 
 <p>
@@ -97,14 +97,14 @@ In 2D, the the value for <InlineEquation equation=" w " />, the distributed load
 
 <Image src='/sta/hydrostatic_fluid_pressure/Fluid2DPlate.PNG' width='5'></Image>
 
-<DisplayEquation equation = "F_R = \\rho * g * h * b * L" background = "True" title = "In 2D, the resultant force from the distributed load can be written as" id = "hfp-2D" derivation = "True">
+<DisplayEquation equation = "F_R = \\rho * g * h * b * L" title = "In 2D, the resultant force from the distributed load can be written as" background = "True" derivation = "True" id = "hfp-2D">
 	<DisplayEquation equation = "\\begin{align} w = p * b = \\rho * g * h * b && \\mathrm{[\\frac{N}{m^2}] * [m] = [\\frac{N}{m}]} \\end{align}"/></span></div>
 	<p class = "text-center">
 		(force over length)<br>
 		To find <InlineEquation equation = "F_R,"/> multiply by length:
 	</p>
 	<DisplayEquation equation = `\\begin{align} F_R = w &* L = \\rho * g * h * b * L \\\\
-	&\\Uparrow \\text{area under distributed load!} \\end{align}`/>
+		&\\Uparrow \\text{area under distributed load!} \\end{align}`/>
 </DisplayEquation>
 
 </SubSection>
