added back r perp segment
undid previous deletion

--- a/src/pages/sta/vectors_scalars.astro
+++ b/src/pages/sta/vectors_scalars.astro
@@ -371,7 +371,44 @@ Alternatively, the vector components can be determined geometrically via the ang
   vectors are <em>perpendicular</em>, <em>orthogonal</em>, or
   <em>normal</em> to each other.
 </p>
+<p>
+  In 2D we can easily find a perpendicular vector by rotating <InlineEquation equation="\\vec{a}" /> counterclockwise with the following equation.
+</p>
 
+<DisplayEquation id="rvv-en" title="Counterclockwise perpendicular vector in 2D." background="True" equation="\\vec{a}^\\perp = -a_2\\,\\hat\\imath + a_1\\hat\\jmath" derivation="True">
+  <p>
+    It is easy to check that <InlineEquation equation="\\vec{a}^\\perp" /> is always
+    perpendicular to <InlineEquation equation="\\vec{a}" />:
+
+    <DisplayEquation equation="\\vec{a} \\cdot \\vec{a}^\\perp        = (a_1\\,\\hat\\imath + a_2\\,\\hat\\jmath) \\cdot        (-a_2\\,\\hat\\imath + a_1\\hat\\jmath)        = -a_1 a_2 + a_2 a_1 = 0." />
+
+    The fact that <InlineEquation equation="\\vec{a}^\\perp" /> is a <InlineEquation equation="+90^\\circ" /> rotation
+    of <InlineEquation equation="\\vec{a}" /> is apparent from Figure <a
+    href="#rvv-fn">#rvv-fn</a>.
+  </p>
+</DisplayEquation>
+
+<p>
+  In 2D there are two perpendicular directions to a given
+  vector <InlineEquation equation="\\vec{a}" />, given by <InlineEquation equation="\\vec{a}^\\perp" /> and
+  <InlineEquation equation="-\\vec{a}^\\perp" />. In 3D there is are many perpendicular
+  vectors, and there is no simple formula like <a
+  href="#rvv-en">#rvv-en</a> for 3D.
+</p>
+
+<Center>
+  <PrairieDrawCanvas id="rvv-fn-c" width="400" height="300" class="figureImage">
+    <p class="controls">
+      <button class="anim-toggle:rvv-fn-c" onclick="rvv_fn_c.toggleAnim()">animate</button>
+      <button class="reset:rvv-fn-c" onclick="rvv_fn_c.reset()">reset</button>
+      <button class="option-toggle:rvv-fn-c:showComponents" onclick="rvv_fn_c.toggleOption('showComponents')">show components</button>
+    </p>
+    <p class="figureCaption">
+      The perpendicular vector <InlineEquation equation="\\vec{a}^\\perp" /> is always a
+      <InlineEquation equation="+90^\\circ" /> rotation of <InlineEquation equation="\\vec{a}" />.
+    </p>
+  </PrairieDrawCanvas>
+</Center>
 </SubSubSection>
 
 <SubSubSubSection title="Dot product identities" id="dot_product_identities">
