--- a/src/pages/sol/bending.astro
+++ b/src/pages/sol/bending.astro
@@ -399,7 +399,7 @@ The moment of inertia of the area <InlineEquation equation='A' /> with respect t
                     <strong>Units</strong> 
                 </td>
                 <td>
-                    <InlineEquation equation="length*mass^2"/>
+                    <InlineEquation equation="mass*length^2"/>
                 </td>
                 <td>
                     <InlineEquation equation="length^3"/>
