--- a/src/pages/sol/transverse_shear.astro
+++ b/src/pages/sol/transverse_shear.astro
@@ -270,13 +270,13 @@ Built-up beams are beams that have been put together with either an adhesive (gl
 <Example id="blt-fst" title="The following beam is composed of 2 boards connected by 6 nails." solution="True">
   <div class="d-flex flex-row">
     <Row>
-      <Col values="12 md-4.5">
+      <Col values="12 md-4">
         <p>
           The nails are at an interval of of <InlineEquation equation="\\Delta s = 50 \\text{ } mm"/>. The shear force is <InlineEquation equation="V = 100 \\text{ } kN"/>. 
-          Find the shear flow (<InlineEquation equation="q"/>) and the load each fastener carries (<InlineEquation equation="f_n"/>).
+          Find the shear flow (<InlineEquation equation="q"/>) and the load at each fastener (<InlineEquation equation="f_n"/>).
         </p>
       </Col>
-      <Col values="12 md-7.5">
+      <Col values="12 md-8">
         <Image src="/sol/transverse_shear/FastenerExample.png" width="6"></Image>
 
       </Col>
