Updated Navtree on Rigid Body Kinematics.astro
Link fixed under Navtree for "Constraint forces"

--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -39,7 +39,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
     </li>
 	<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#constrained_motion'>Constrained motion</a>
 		        <ul class='list-group list-group-flush py-0'> 
-            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#constraint forces'>Constraint forces</a></li>
+            <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#constraint_forces'>Constraint forces</a></li>
         </ul>
     </li>
 	<li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#gears'>Gears</a>
