Fixed Navtree Links
Updated Navtree links on Vector Calculus pages.

--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -45,7 +45,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     </li>
     <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#chain_rule'>Chain rule</a>
     </li>
-    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#integration'>Integration</a>
+    <li class='list-group-item py-0'><a class='text-decoration-none subsection' href='#integration'>Integration</a></li>
         <ul class='list-group list-group-flush py-0'> 
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#cartesian_basis'>Cartesian basis</a></li>
             <li class='list-group-item py-0'><a class='text-decoration-none subsubsection' href='#polar_basis'>Polar basis</a></li>
