--- a/src/pages/dyn/rigid_body_kinematics.astro
+++ b/src/pages/dyn/rigid_body_kinematics.astro
@@ -1166,7 +1166,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
 
     <Image src="/dyn/rigid_body_kinematics/avs_Mercedes_Kubelwagen_G5_600.jpg" width="6">
       <p class="figureCaption">
-        Figure 1: A <a
+        A <a
         href="http://www.autoevolution.com/cars/mercedes-benz-g5-w152-1937.html#aeng_mercedes-benz-g5-w152-1937-20">Mercedes-Benz
         Typ G 5 (W 152, 1937–1941)</a> housed in <a
         href="http://en.wikipedia.org/wiki/Technikmuseum_Speyer">Technik
@@ -1414,7 +1414,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
         <button class="reset-time:aml-fk-c" onclick="aml_fk_c.resetTime()">reset</button>
       </p>
       <p class="figureCaption">
-        <i>Figure 2: An <a href="http://en.wikipedia.org/wiki/Magnetic_resonance_imaging">MRI</a> image of a <a
+        <i> An <a href="http://en.wikipedia.org/wiki/Magnetic_resonance_imaging">MRI</a> image of a <a
         href="http://en.wikipedia.org/wiki/Sagittal_plane">sagittal
         section</a> through a human <a
         href="http://en.wikipedia.org/wiki/Knee">knee joint</a>,
@@ -1512,7 +1512,7 @@ import DisplayTable from "../../components/DisplayTable.astro"
           <button class="reset-time:aml-fw-c" onclick="aml_fw_c.resetTime()">reset</button>
         </p>
         <p class="figureCaption">
-          <i>Figure 3: The rear suspension of a 1998 <a
+          <i>The rear suspension of a 1998 <a
           href="http://en.wikipedia.org/wiki/Ford_Ranger_EV">Ford
           Ranger EV</a>.  Image credit: <a
           href="http://commons.wikimedia.org/wiki/File:GSFRRearViewUnderCropped.jpg">Wikimedia
