--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -446,13 +446,13 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
   </p>
   <p>
     Leibniz notation is meant to be reminiscent of the 
-    definition of a derivative:
+    definition of a derivative.
   </p>
   <p>
     <DisplayEquation title="Leibniz notation." id = "rvc-lbz" background = True equation="\\frac{dy}{dt}=\\lim_{\\Delta t\\rightarrow0}\\frac{\\Delta y}{\\Delta t}." />
   </p>
   <p>
-    Newton notation is meant to be compact:
+    Newton notation is meant to be compact.
   </p>
   <p>
     <DisplayEquation title="Newton notation." id = "rvc-new" background = True equation="\\dot{y} = \\frac{dy}{dt}." />
@@ -726,7 +726,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 <SubSection title="Integration">
 
 <p>
-    <b>Cartesian:</b>
+    <b>Cartesian.</b>
   </p>
 
     <DisplayEquation title = "Cartesian." id = "rvc-intc" background = True equation= "\\vec{v} = \\dot{x} \\hat\\imath + \\dot{y} \\hat\\jmath"/>
@@ -735,7 +735,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
     <li>Integrate <InlineEquation equation="\\dot{x}" />  and <InlineEquation equation="\\dot{y}" /> to find \(x\) and \(y\). </li>
   </ul>
   <p>
-    <b>Polar:</b>
+    <b>Polar.</b>
   </p>
 
     <DisplayEquation title = "Polar." id = "rvc-intp" background = True equation= "\\vec{v} = \\dot{r} \\hat{e}_r + r \\dot{\\theta} \\hat{e}_\\theta"/>
