Updated Vector Calculus Navtree
Integration link fixed.

--- a/src/pages/dyn/vector_calculus.astro
+++ b/src/pages/dyn/vector_calculus.astro
@@ -723,7 +723,7 @@ import InlineCanvas from "../../components/InlineCanvas.astro"
 </SubSection>
 
     
-<SubSection title="Integration">
+<SubSection title="Integration" id = "integration">
 
 <p>
     <b>Cartesian.</b>
